Fixed opacity gradient on project category pages on firefox

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -344,11 +344,13 @@ a {
     margin: 0;
     padding: 8px 0; 
     /* "transparent" only works here because == rgba(0,0,0,0) */ 
-    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, transparent),color-stop(1, white));
-    background-image: -webkit-linear-gradient(top, transparent, white);
-    background-image: -moz-linear-gradient(top, transparent, white);
-    background-image: -ms-linear-gradient(top, transparent, white);
-    background-image: -o-linear-gradient(top, transparent, white);
+    background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
   }
   .col-right .content:not(.jspScrollable) .jspContainer {
     width: 570px !important;
